fixing main activity

--- a/ChildrensTherapy/app/src/main/res/layout/activity_main.xml
+++ b/ChildrensTherapy/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:text="Open Webpage" />
 
-        <Button2
+        <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -89,3 +89,36 @@
     </TableRow>
 
 </TableLayout>
+
+<RelativeLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/idRLContainer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".MainActivity"> 
+  
+    <!--on below line we are creating a simple text view-->
+    <TextView
+        android:id="@+id/idTVHeading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="Video View in Android"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold" /> 
+  
+    <!-- adding VideoView to the layout -->
+    <VideoView
+        android:id="@+id/idVideoView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/idTVHeading"
+        android:layout_centerInParent="true" /> 
+      
+</RelativeLayout>
