App is functional. Tested on my phone. Works and videos play.

--- a/ChildrensTherapy/app/src/main/res/layout/activity_main.xml
+++ b/ChildrensTherapy/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
 
@@ -14,27 +14,33 @@
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Open Webpage" />
+            android:text="Spongebob" />
 
         <Button
             android:id="@+id/monkey_video"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/button_2_text"
+            android:text="Monkeys"
             style="?android:attr/buttonBarButtonStyle" />
-        <VideoView
-            android:id="@+id/idVideoView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@id/monkey_video" />
 
         <Button
             android:id="@+id/button3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/button_3_text"
+            android:text="Button 3"
             style="?android:attr/buttonBarButtonStyle" />
+    </TableRow>
 
+    <!-- VideoView in a new row -->
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <VideoView
+            android:id="@+id/idVideoView"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_span="500" />
     </TableRow>
 
     <!-- Second Row -->
@@ -62,7 +68,6 @@
             android:layout_height="wrap_content"
             android:text="@string/button_6_text"
             style="?android:attr/buttonBarButtonStyle" />
-
     </TableRow>
 
     <!-- Third Row -->
@@ -90,7 +95,6 @@
             android:layout_height="wrap_content"
             android:text="@string/button_9_text"
             style="?android:attr/buttonBarButtonStyle" />
-
     </TableRow>
 
 </TableLayout>
